# gear-building-gui

./: DEVELOPER-NOTES.md  Dockerfile  GearBuilderGUI.py  README.md  Run.py  TODO  config.py  config.ui  config_dialog.py  convert_ui_to_py.sh  input_dialog.py  inputs.py  inputs.ui  manifest.py  manifest.ui  pyproject.toml  requirements.txt  run.py
default_templates/: Dockerfile.mu  README.md.mu  requirements.txt.mu
gear_builder_gui/: _dockerfile.py  config.py  config_dialog.py  dockerfile.py  gear_builder_gui.py  input_dialog.py  inputs.py  manifest.py  menus.py  script_management.py  template_management.py
gear_builder_gui/pyqt5_ui/: config.py  config.ui  convert_ui_to_py.sh  gear_builder_gui.py  gear_builder_gui.ui  inputs.ui
gear_library/bids-app-template/: Dockerfile.mu  bids-app-template.gear.json  gear_template_directives.json  run.py
gear_library/build_validate_execute/utils/: args.py
gear_library/compound_script/: run.py
gear_library/compound_script/utils/: args.py  validate_config.py
gear_library/simple_script/: run.py
pyqt5_ui/: config.ui  gear_builder_gui.ui  inputs.ui  manifest.ui
script_library/bids-app-template/: Dockerfile.mu  README.md  bids-app-template.gear.json  manifest.json  requirements.txt  requirements.txt.mu  run.py  script_manifest.json
script_library/build_validate_execute/: run.py
script_library/build_validate_execute/utils/: args.py
script_library/compound_script/utils/: custom_logger.py
script_library/simple_script/: gear_template_directives.json  run.py  script_manifest.json
utils/: args.py  validate_config.py
