[tool.poetry]
name = "sparkstuff"
version = "0.0.10"
description = "A cross-platform user interface to download, view, and produce application-specific workflows from selected data within a particular Flywheel instance."
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://gitlab.com/flywheel-io/flywheel-apps/fw-app-launcher"
classifiers = [
    "Topic :: Scientific/Engineering."
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyQt6 = "^6.2.3"
requests = "^2.23.0"
pystache = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
coverage = {extras = ["toml"], version = "^5.3"}
black = "^22.1.0"
ipython = "^8.5.0"
isort = "^5.6.4"
pylint = "^2.6.0"
pycodestyle = "^2.6.0"
pydocstyle = "^5.1.1"
mypy = "^0.790"
pyinstaller = "^5.0.1"
pre-commit = "^2.20.0"
pip = "^22.1.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
